# 2D-Sim

./: .gitignore  .params.yaml.swp  CMakeLists.txt  Press_dens.py  animation.py  antp_numDensity.txt  betterIsotherm.py  calc_properties.py  check_force_calc.py  copy_data.py  energies.txt  forces.txt  graphs.py  newRadDist.py  numDensity.txt  par_numDensity.txt  params.yaml  particle_type.txt  pcf.py  positions.txt  radDensity.py  radDist.py  radial_dist.py  sim  testRad.py  test_sim  tsim
b/: CMakeCache.txt  Makefile  cmake_install.cmake
catch_testing/: main_config.cpp  properties_test.hpp  test_params.yaml
include/: Boundary.h  Interaction.h  Parameters.h  Particle.h  kiss.h  potential.h
old_param_files/: p.yaml
src/: .Boundary.cpp.swp  Boundary.cpp  Boundary.h  Interaction.cpp  Interaction.h  Observer.h  Parameters.cpp  Parameters.h  Particle.cpp  Particle.h  Particle_Manager.cpp  Particle_Manager.h  Properties.cpp  Properties.h  Simulation.cpp  Simulation.h  System_Manager.cpp  System_Manager.h  main.cpp  mainsim.cpp  testSim.cpp
temp/: animation.py  calc_properties.py  isotherm.py  newRadDist.py  params.yaml
tests/: practice.cpp  run
